# visor

./: .gitignore  CODE-OF-CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.arch  Dockerfile.cachy  Dockerfile.debian  LICENSE  README.md  deno.json
cli/: Cargo.toml
cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: sketch.rs
crates/plugin/src/: plugin.rs
crates/plugins/visor_plugin_draw/: Cargo.toml
crates/plugins/visor_plugin_draw/src/: ellipse.rs  lib.rs  quad.rs  rect.rs
crates/plugins/visor_plugin_log/: Cargo.toml
crates/plugins/visor_plugin_log/src/: lib.rs  visor-plugin-log.ts
crates/plugins/visor_plugin_math/: Cargo.toml
crates/plugins/visor_plugin_math/src/: lib.rs
crates/plugins/visor_plugin_midi/: Cargo.toml
crates/plugins/visor_plugin_state/: Cargo.toml
crates/plugins/visor_plugin_state/src/: lib.rs
crates/plugins/visor_plugin_time/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  plugin_snapshot.rs  runtime.rs
crates/visor_display/: Cargo.toml
crates/visor_display/src/: display.rs  display_manager.rs  lib.rs
crates/visor_draw/: Cargo.toml
crates/visor_draw/src/: draw.rs
crates/visor_engine/: Cargo.toml
crates/visor_engine/src/: display.rs  display_builder.rs  display_manager.rs  draw.rs  engine.rs  engine_builder.rs  lib.rs  plugin.rs  sketch.rs  sketch_builder.rs  sketch_store.rs  sketch_worker.rs  stats.rs  store.rs
crates/visor_engine/src/sketch_runtime/: mod.rs  runtime.rs  startup_snapshot.rs  ts_module_loader.rs
crates/visor_engine/src/wgpu/: display.rs  handle.rs  mod.rs  render_texture.rs  render_texture_builder.rs
crates/visor_engine_builder/: Cargo.toml
crates/visor_engine_builder/src/: engine_builder.rs  lib.rs
crates/visor_plugin/: Cargo.toml
crates/visor_plugin_draw/: Cargo.toml
crates/visor_plugin_draw/src/: draw-plugin.d.ts  draw-plugin.ts  draw.ts  draw_plugin.rs  ellipse.rs  lib.rs  ops.ts  path.rs  path.ts  polygon.rs  polygon.ts  polyline.rs  polyline.ts  quad.rs  rect.rs  shape.rs  spline.rs  spline.ts
crates/visor_plugin_log/: Cargo.toml
crates/visor_plugin_log/src/: lib.rs  log_plugin.rs
crates/visor_plugin_math/: Cargo.toml
crates/visor_plugin_math/src/: lib.rs  math-plugin.ts  math_plugin.rs
crates/visor_plugin_midi/: Cargo.toml
crates/visor_plugin_midi/src/: encoder.ts  lib.rs  mapping.rs  midi_plugin.rs
crates/visor_plugin_state/: Cargo.toml
crates/visor_plugin_state/src/: lib.rs  state-plugin.d.ts  state_plugin.rs
crates/visor_plugin_time/: Cargo.toml
crates/visor_plugin_time/src/: lib.rs  time_plugin.rs  visor-plugin-time.ts
crates/visor_runtime/: Cargo.toml
crates/visor_runtime/src/: lib.rs  plugin_snapshot.rs  runtime.rs  startup_snapshot.rs  ts_module_loader.rs
crates/visor_wgpu/: Cargo.toml
crates/visor_wgpu/src/: display.rs  handle.rs  lib.rs  render_texture.rs
crates/wgpu/src/: display.rs
display/: Cargo.toml
display/src/: display.rs  display_manager.rs  lib.rs
draw/: Cargo.toml
engine/: Cargo.toml
engine/src/: draw.rs  engine.rs  lib.rs  sketch.rs  sketch_worker.rs
examples/: color.js  console.js  deno.json  draw-lines.js  draw-paths.js  draw-shapes.js  grid.js  hello-world.js  points.ts  simple.js  state.ts  time.js  transform.js
examples/counter_plugin/: Cargo.toml
examples/counter_plugin/src/: counter-plugin.js  counter_plugin.rs  lib.rs
examples/counter_plugin/tests/: verify_plugin.rs
examples/plugin/: Cargo.toml  example-sketch.js
examples/plugin/src/: lib.rs  visor-counter.js
plugin/: Cargo.toml
plugin-draw/: Cargo.toml
plugin-draw/src/: lib.rs
plugins/plugin-draw/: Cargo.toml
plugins/visor_plugin_draw/: Cargo.toml
plugins/visor_plugin_draw/src/: color.ts  draw.ts  ellipse.rs  ellipse.ts  lib.rs  math.ts  ops.ts  polyline.rs  quad.rs  quad.ts  rect.rs  rect.ts  spline.rs  spline.ts  visor-draw.js  visor-plugin-draw.d.ts  visor-plugin-draw.ts
plugins/visor_plugin_log/: Cargo.toml
plugins/visor_plugin_log/src/: lib.rs  ops.ts  visor-log.js  visor-plugin-log.d.ts  visor-plugin-log.js  visor-plugin-log.ts
plugins/visor_plugin_math/: Cargo.toml
plugins/visor_plugin_math/src/: lib.rs  ops.ts  visor-plugin-math.d.ts
plugins/visor_plugin_midi/: Cargo.toml
plugins/visor_plugin_midi/src/: config.rs  control.rs  encoder.rs  lib.rs  mapping.rs  note.rs  note.ts  ops.ts  visor-midi.js  visor-plugin-midi.d.ts  visor-plugin-midi.ts
plugins/visor_plugin_state/: Cargo.toml
plugins/visor_plugin_state/src/: lib.rs  ops.ts  visor-plugin-state.d.ts  visor-plugin-state.ts  visor-state.js
plugins/visor_plugin_time/: Cargo.toml
plugins/visor_plugin_time/src/: lib.rs  ops.ts  visor-plugin-time.d.ts  visor-plugin-time.js  visor-plugin-time.ts  visor-time.js
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  ops.rs  runtime.rs  ts_module_loader.rs
visor/: Cargo.toml
visor_cli/: Cargo.toml
visor_cli/src/: main.rs  run.rs  types.rs
visor_core/: Cargo.toml
visor_core/src/: core_plugins.rs  default_plugins.rs  lib.rs
visor_live_cli/: Cargo.toml
visor_live_cli/src/: main.rs  run.rs  types.rs
wgpu/: Cargo.toml
wgpu/src/: display.rs  instance.rs  lib.rs  render_texture.rs
