[workspace]
resolver = "2"
members = [
  "crates/plugins/*",
  "crates/visor_*",
  "examples/*",
  "visor_core",
  "visor_live_cli",
]

[workspace.dependencies]
anyhow = "1.0"
deno_core = "0.352.0"
deno_error = "0.6.1"
nannou = { git = "https://github.com/EmperorJack/nannou.git", branch = "upgrade-wgpu" }
tao = { version = "0.34.0" }
tokio = { version = "1.26.0" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
visor_core = { path = "./visor_core" }
visor_engine = { path = "./crates/visor_engine" }
visor_plugin_draw = { path = "./crates/plugins/visor_plugin_draw" }
visor_plugin_log = { path = "./crates/plugins/visor_plugin_log" }
visor_plugin_math = { path = "./crates/plugins/visor_plugin_math" }
visor_plugin_midi = { path = "./crates/plugins/visor_plugin_midi" }
visor_plugin_state = { path = "./crates/plugins/visor_plugin_state" }
visor_plugin_time = { path = "./crates/plugins/visor_plugin_time" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
