[workspace]
resolver = "2"
members = ["crates/*", "examples/*", "visor_cli", "visor_core"]

[workspace.dependencies]
anyhow = "1.0"
deno_core = "0.352.0"
deno_error = "0.6.1"
log = "0.4"
nannou = { git = "https://github.com/EmperorJack/nannou.git", branch = "upgrade-wgpu" }
tao = { version = "0.34.0" }
tokio = { version = "1.26.0" }
visor_core = { path = "./visor_core" }
visor_engine = { path = "./crates/visor_engine" }
visor_plugin_draw = { path = "./crates/visor_plugin_draw" }
visor_plugin_log = { path = "./crates/visor_plugin_log" }
visor_plugin_math = { path = "./crates/visor_plugin_math" }
visor_plugin_midi = { path = "./crates/visor_plugin_midi" }
visor_plugin_state = { path = "./crates/visor_plugin_state" }
visor_plugin_time = { path = "./crates/visor_plugin_time" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
