[workspace]
resolver = "2"
members = ["crates/*", "examples/*", "visor_cli", "visor_core"]

[workspace.package]
description = "Creative code real-time visuals in JavaScript or TypeScript."
edition = "2024"
homepage = "https://github.com/EmperorJack/visor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EmperorJack/visor"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
deno_core = "0.352.0"
deno_error = "0.6.1"
log = "0.4"
nannou = { version = "0.19.0-1", package = "visor_nannou" }
tao = { version = "0.34.0" }
tokio = { version = "1.26.0" }
visor_core = { path = "./visor_core", version = "0.1.0" }
visor_engine = { path = "./crates/visor_engine", version = "0.1.0" }
visor_plugin_draw = { path = "./crates/visor_plugin_draw", version = "0.1.0" }
visor_plugin_log = { path = "./crates/visor_plugin_log", version = "0.1.0" }
visor_plugin_math = { path = "./crates/visor_plugin_math", version = "0.1.0" }
visor_plugin_midi = { path = "./crates/visor_plugin_midi", version = "0.1.0" }
visor_plugin_state = { path = "./crates/visor_plugin_state", version = "0.1.0" }
visor_plugin_time = { path = "./crates/visor_plugin_time", version = "0.1.0" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
