[package]
name = "visor_cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
notify = "6.1.1"
tao.workspace = true
visor_core.workspace = true
visor_plugin_log.workspace = true
