[package]
name = "visor_cli"
version = "0.1.0"
description = "Command line interface for running Visor sketches."
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.17", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false, features = [
  "auto-color",
] }
log.workspace = true
notify = "6.1.1"
tao.workspace = true
visor_core.workspace = true
visor_plugin_log.workspace = true
