[package]
name = "visor_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visor_engine.workspace = true
visor_plugin_draw.workspace = true
visor_plugin_log.workspace = true
visor_plugin_math.workspace = true
visor_plugin_midi.workspace = true
visor_plugin_state.workspace = true
visor_plugin_time.workspace = true
