[package]
name = "visor_core"
version = "0.1.0"
description = "Re-exports visor_engine and all of the core plugins."
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
visor_engine.workspace = true
visor_plugin_draw.workspace = true
visor_plugin_log.workspace = true
visor_plugin_math.workspace = true
visor_plugin_midi.workspace = true
visor_plugin_state.workspace = true
visor_plugin_time.workspace = true
