[package]
name = "visor_live_cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
notify = "6.1.1"
tao = { version = "0.34.0" }
visor = { path = "../visor" }
visor_plugin_log = { path = "../plugins/visor_plugin_log" }
