[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
display = { path = "../display" }
draw = { path = "../draw" }
nannou = { version = "0.19.0" }
plugin = { path = "../plugin" }
plugin-draw = { path = "../../plugins/plugin-draw" }
runtime = { path = "../runtime" }
tao = { version = "0.16.2" }
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
wgpu = { path = "../wgpu" }
