[package]
name = "visor_display"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true
tao.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
visor_wgpu = { path = "../visor_wgpu" }
