[package]
name = "visor_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
nannou.workspace = true
pluginator = "1.0.1"
state = { version = "0.6.0" }
tao.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
visor_display = { path = "../visor_display" }
visor_runtime = { path = "../visor_runtime" }
visor_wgpu = { path = "../visor_wgpu" }
