[package]
name = "visor_plugin_midi"
version = "0.1.0"
edition = "2024"

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
midir = "0.10.1"
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["sync"] }
visor_engine.workspace = true
