[package]
name = "visor_plugin_midi"
version = "0.1.0"
description = "Plugin for connecting to MIDI devices and loading mappings."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
midir = "0.10.1"
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["sync"] }
visor_engine.workspace = true
