[package]
name = "visor_plugin_state"
version = "0.1.1"
description = "Plugin for persistent sketch state when hot reloading."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deno_core.workspace = true
visor_engine.workspace = true
