[package]
name = "visor_plugin_time"
version = "0.1.1"
description = "Plugin for time and frame related functions."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deno_core.workspace = true
visor_engine.workspace = true
