[package]
name = "visor_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deno_ast = { version = "0.41.1", features = ["transpiling"] }
deno_core = "0.319.0"
tokio = { version = "1.26.0", features = ["full"] }
