[package]
name = "visor_runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deno_ast = { version = "0.48.0", features = ["transpiling"] }
deno_core = "0.352.0"
deno_error = "0.6.1"
tokio = { version = "1.26.0", features = ["full"] }
