[package]
name = "visor_runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
deno_ast = { version = "0.48.0", features = ["transpiling"] }
deno_core.workspace = true
deno_error.workspace = true
tokio = { workspace = true, features = ["full"] }
