[package]
name = "visor_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { version = "0.19.0" }
raw-window-handle = { version = "0.5.2" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
