[package]
name = "visor_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { path = "../../../nannou/nannou" }
tao = { version = "0.30.8", features = ["rwh_06"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
