[package]
name = "counter_plugin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core.workspace = true
visor_engine.workspace = true

[dev-dependencies]
visor_core.workspace = true
visor_plugin_log.workspace = true

[lib]
crate-type = ["cdylib"]
