[package]
name = "counter_plugin"
version = "0.1.0"
description = "Example plugin implementation."
edition.workspace = true
publish = false

[dependencies]
deno_core.workspace = true
visor_engine.workspace = true

[dev-dependencies]
visor_core.workspace = true
visor_plugin_log.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
