[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.352.0"
visor_engine = { path = "../../crates/visor_engine" }

[dev-dependencies]
visor_core = { path = "../../visor_core" }
visor_plugin_log = { path = "../../plugins/visor_plugin_log" }

[lib]
crate-type = ["cdylib"]
