[package]
name = "visor_plugin_midi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.352.0"
deno_error = "0.6.1"
midir = "0.10.1"
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["sync"] }
visor_engine = { path = "../../crates/visor_engine" }
